@@ -3,9 +3,7 @@ package org.lxdproject.lxd.member.service;
 import lombok.RequiredArgsConstructor;
 import org.lxdproject.lxd.apiPayload.code.exception.handler.FriendHandler;
 import org.lxdproject.lxd.apiPayload.code.status.ErrorStatus;
-import org.lxdproject.lxd.diary.dto.MyDiarySummaryResponseDTO;
-import org.lxdproject.lxd.diary.entity.Diary;
-import org.lxdproject.lxd.diary.repository.DiaryRepository;
+
 import org.lxdproject.lxd.member.dto.*;
 import org.lxdproject.lxd.member.entity.FriendRequest;
 import org.lxdproject.lxd.member.entity.Member;
@@ -16,9 +14,6 @@ import org.lxdproject.lxd.member.repository.MemberRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-
-import static org.lxdproject.lxd.diary.util.DiaryUtil.generateContentPreview;
 
 @Service
 @RequiredArgsConstructor
@@ -27,17 +22,24 @@ public class FriendService {
     private final FriendRepository friendRepository;
     private final MemberRepository memberRepository;
     private final FriendRequestRepository friendRequestRepository;
-    private final DiaryRepository diaryRepository;
 
     public FriendListResponseDTO getFriendList(Long memberId) {
+        Member member = findMemberById(memberId);
 
-        List<Member> friends = friendRepository.findFriendsByMemberId(memberId);
+        List<Member> friends = getFriends(memberId);
+        int totalFriends = friends.size();
+
+        int totalRequests = getSentRequestCount(member) + getReceivedRequestCount(member);
 
         List<FriendResponseDTO> friendDtos = friends.stream()
-                .map(friend -> new FriendResponseDTO(friend.getId(), friend.getUsername(), friend.getNickname()))
-                .collect(Collectors.toList());
+                .map(friend -> new FriendResponseDTO(
+                        friend.getId(),
+                        friend.getUsername(),
+                        friend.getNickname(),
+                        friend.getProfileImg()))
+                .toList();
 
-        return new FriendListResponseDTO(friendDtos.size(), friendDtos);
+        return new FriendListResponseDTO(totalFriends, totalRequests, friendDtos);
     }
 
     public void sendFriendRequest(Long requesterId, FriendRequestCreateRequestDTO requestDto) {
@@ -117,54 +119,59 @@ public class FriendService {
     }
 
     public FriendRequestListResponseDTO getPendingFriendRequests(Long memberId) {
-        Member currentMember = memberRepository.findById(memberId)
-                .orElseThrow(() -> new FriendHandler(ErrorStatus.MEMBER_NOT_FOUND));
+        Member currentMember = findMemberById(memberId);
 
         List<FriendRequest> sent = friendRequestRepository.findByRequesterAndStatus(currentMember, FriendRequestStatus.PENDING);
         List<FriendRequest> received = friendRequestRepository.findByReceiverAndStatus(currentMember, FriendRequestStatus.PENDING);
 
+        int sentCount = sent.size();
+        int receivedCount = received.size();
+        int totalFriends = getFriends(memberId).size();
+
         List<FriendResponseDTO> sentDtos = sent.stream()
-                .map(req -> {
-                    Member target = req.getReceiver();
-                    return new FriendResponseDTO(target.getId(), target.getUsername(), target.getNickname());
-                }).toList();
-
-        List<FriendResponseDTO> receivedDtos = received.stream()
-                .map(req -> {
-                    Member target = req.getRequester();
-                    return new FriendResponseDTO(target.getId(), target.getUsername(), target.getNickname());
-                }).toList();
-
-        return new FriendRequestListResponseDTO(sentDtos.size(), receivedDtos.size(), sentDtos, receivedDtos);
-    }
-
-    public FriendDetailResponseDTO getFriendDetail(Long currentUserId, Long friendId) {
-        if (currentUserId.equals(friendId)) {
-            throw new FriendHandler(ErrorStatus.INVALID_FRIEND_REQUEST);
-        }
-
-        boolean isFriend = friendRepository.existsFriendRelation(currentUserId, friendId);
-
-        Member friend = memberRepository.findById(friendId)
-                .orElseThrow(() -> new FriendHandler(ErrorStatus.MEMBER_NOT_FOUND));
-
-        List<Diary> diaries = diaryRepository.findByMemberIdAndVisibilityForViewer(friendId, isFriend);
-
-        List<MyDiarySummaryResponseDTO> diaryDtos = diaries.stream()
-                .map(d -> MyDiarySummaryResponseDTO.builder()
-                        .diaryId(d.getId())
-                        .createdAt(d.getCreatedAt().toString())
-                        .title(d.getTitle())
-                        .visibility(d.getVisibility())
-                        .thumbnailUrl(d.getThumbImg())
-                        .likeCount(d.getLikeCount())
-                        .commentCount(d.getCommentCount())
-                        .correctionCount(d.getCorrectionCount())
-                        .contentPreview(generateContentPreview(d.getContent()))
-                        .language(d.getLanguage())
-                        .build())
+                .map(req -> mapToDto(req.getReceiver()))
                 .toList();
 
-        return new FriendDetailResponseDTO(friend.getUsername(), friend.getNickname(), diaryDtos);
+        List<FriendResponseDTO> receivedDtos = received.stream()
+                .map(req -> mapToDto(req.getRequester()))
+                .toList();
+
+        return new FriendRequestListResponseDTO(
+                sentCount,
+                receivedCount,
+                totalFriends,
+                sentDtos,
+                receivedDtos
+        );
+    }
+
+    private Member findMemberById(Long id) {
+        return memberRepository.findById(id)
+                .orElseThrow(() -> new FriendHandler(ErrorStatus.MEMBER_NOT_FOUND));
+    }
+
+    private List<Member> getFriends(Long memberId) {
+        return friendRepository.findFriendsByMemberId(memberId);
+    }
+
+    private int getSentRequestCount(Member member) {
+        return friendRequestRepository
+                .findByRequesterAndStatus(member, FriendRequestStatus.PENDING)
+                .size();
+    }
+
+    private int getReceivedRequestCount(Member member) {
+        return friendRequestRepository
+                .findByReceiverAndStatus(member, FriendRequestStatus.PENDING)
+                .size();
+    }
+
+    private FriendResponseDTO mapToDto(Member member) {
+        return new FriendResponseDTO(
+                member.getId(),
+                member.getUsername(),
+                member.getNickname(),
+                member.getProfileImg()
+        );
     }
 }
